# chan-sccp

./: .clang-format  .cproject  .gitignore  .hgignore  .lgtm.yml  .project  .travis.yml  .version  AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  README.in  README.md  TODO  WARNING_USE_BRANCHES_V3.0.txt  WARNING_USE_BRANCHES_V4.0.txt  WARNING_USE_DEVELOP_BRANCH.txt  acinclude.m4  aclocal.m4  amdoxygen.am  astTrunkConferenceWorkaround.patch  backport_monitor_feature.patch  bootstrap.sh  chan_sccp.c  chan_sccp.h  config.h  configure  configure.ac  create_config.sh  index.md  libtool  make_release.sh  prepare_release  (+40 more)
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ccpp.yml  codeql-analysis.yml
autoconf/: acinclude.m4  acx_pthread.m4  asterisk.m4  check_atomics.m4  check_raii.m4  config.guess  extra.m4  libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4  make_version
build_tools/: make_version  svn2html.css
conf/: XMLDefault.cnf.xml  mySQL5.sql  mysql-v4.sql  mysql-v5.sql  mysql-v5_enum.sql  mysql-v5_old.sql  postgres.sql  sccp.conf  sccp.conf.annotated  sccp.conf.freepbx  sccp.conf.minimal  sccp_extensions.conf.freepbx  sccp_freepbx.conf  sccp_hardware.conf.freepbx  sccp_short.conf  sccp_simple.conf  sccp_templated.conf  sccp_v3.conf  sqlite.sql  sqlite3.sql  tables.sql
conf/database_updates/: 20091215.sql  migrate_to_mysql-v5.sql  update_mysql_v4.sql  update_mysql_v5.sql  update_postgresql.sql
conf/ldap/: asterisk.sccp.ldif  asterisk.sccp.schema
conf/tftp/: SEP0000000000.cnf.xml_69xx_template  SEP0000000000.cnf.xml_791x_template  SEP0000000000.cnf.xml_7925_template  SEP0000000000.cnf.xml_annotated  (+13 more)
contrib/: app_sms.patch  asterisk-1.8_message-backport.patch  backport_monitor_feature.patch  convert_conf_to_sql.pl  convert_runningconf_to_sql.sh  generate_backtrace  llvm-scan-build  refcounter.py  res_xmpp.patch  retrieve_phone_debug_logs  safe_asterisk  safe_asterisk_backtrace  set_sep_cnf  skinny-proxy-v1.2.pl  skinny-proxy-v1.4.pl
contrib/gen_sccpconf/: .indent.pro  Makefile  Makefile.am  Makefile.in  gen_sccpconf.1  gen_sccpconf.c  gen_sccpconf.h  sccp_xml_parser.php
debian/: README.Debian  chan-sccp-b.default.ex  chan-sccp-b.doc-base.EX  chan-sccp-b1.dirs  chan-sccp-b1.docs  chan-sccp-b1.install  chan-sccp.docs  changelog  control  copyright  cron.d.ex  dirs  docs  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
doc/: .gitignore  00_Index.doc  01_Index.doc  02_What_Is_Chan_SCCP.doc  03_Building_and_Installation_Guide.doc  04_Setup_Guide.doc  05_Features_V3.doc  05_New_Features.doc  06_Frequently_Asked_Questions.doc  06_New_Features.doc  07_Frequently_Asked_Questions.doc  07_Supported_Operating_Systems.doc  08_Developers_Guide.doc  08_Supported_Operating_Systems.doc  09_Developers_Guide.doc  09_Sources_Explained.doc  10_Consulted_Documentation.doc  10_Sources_Explained.doc  10_What_Is_Chan_SCCP.doc  11_Consulted_Documentation.doc  11_Licensing.doc  12_Licensing.doc  12_Reporting_Issues_Problems.doc  13_Licensing.doc  13_Reporting_Issues_Problems.doc  20_Building_and_Installation_Guide.doc  30_Setup_Guide.doc  35_How_To.doc  40_New_Features.doc  50_Frequently_Asked_Questions.doc  55_Reporting_Issues_Problems.doc  60_Supported_Operating_Systems.doc  70_Sources_Explained.doc  80_Consulted_Documentation.doc  90_Developers_Guide.doc  99_Licensing.doc  Makefile.am  Makefile.in  chan-sccp-b_pdf.sty  doxygen-header  (+7 more)
patches/: blindtransfer_GPickUp.patch  chan_sccp-20060408-7961_DirectoriesDD.patch  gpickup_20071108.patch  hold_20071108.patch  meetme.patch  segfault_on_btrans.patch  serviceURL.patch  setMessage.patch  setmessage2.patch
src/: .astylerc  .clang-format  .gitignore  .indent.pro  Makefile.am  Makefile.in  Makefile.inc.am  Makefile.old  chan_sccp.c  chan_sccp.h  chan_sccp_enums.hh  common.h  config.h.in  create_config.sh  define.h  forward_declarations.h  sccp_actions.c  sccp_actions.h  sccp_adv_features.c  sccp_adv_features.h  sccp_appfunctions.c  sccp_appfunctions.h  sccp_atomic.h  sccp_callinfo.c  sccp_callinfo.h  sccp_channel.c  sccp_channel.h  sccp_cli.c  sccp_cli.h  sccp_cli_table.h  sccp_codec.c  sccp_codec.h  sccp_conference.c  sccp_conference.cpp  sccp_conference.h  sccp_config.c  sccp_config.h  sccp_config_entries.h  sccp_config_entries.hh  sccp_debug.c  (+90 more)
src/conference/: .indent.pro  sccp_conference10.c
src/pbx_impl/: Makefile.am  Makefile.in  pbx_impl.c  pbx_impl.h
src/pbx_impl/ast/: Makefile.am  Makefile.in  ast.c  ast.h  ast104.h  ast106.c  ast106.h  ast108.c  ast108.h  ast110.c  ast110.h  ast111.c  ast111.h  ast112.c  ast112.h  ast112_announce.c  ast112_announce.h  ast113.c  ast113.h  astTrunk.c  astTrunk.h  define.h  include_asterisk_autoconfig.h
src/pbx_impl/ast106/: Makefile.am  Makefile.in  ast106.c  ast106.h
src/pbx_impl/ast108/: Makefile.am  Makefile.in  ast108.c  ast108.h
src/pbx_impl/ast110/: Makefile.am  Makefile.in  ast110.c  ast110.h
src/pbx_impl/ast111/: Makefile.am  Makefile.in  ast111.c  ast111.h
src/pbx_impl/ast112/: Makefile.am  Makefile.in  ast112.c  ast112.h
src/pbx_impl/ast113/: Makefile.am  Makefile.in  ast113.c  ast113.h
src/pbx_impl/ast114/: Makefile.am  Makefile.in  ast114.c  ast114.h
src/pbx_impl/ast115/: Makefile.am  Makefile.in  ast115.c  ast115.h
src/pbx_impl/ast116/: Makefile.am  Makefile.in  ast116.c  ast116.h
src/pbx_impl/ast117/: Makefile.am  Makefile.in  ast117.h
src/pbx_impl/ast118/: Makefile.am  Makefile.in
src/pbx_impl/ast119/: Makefile.am  Makefile.in  ast119.c
src/pbx_impl/ast_announce/: Makefile.am  Makefile.in  ast_announce.c  ast_announce.h
tests/: Makefile.am  Makefile.in
tests/unittests/: Makefile.am  Makefile.in  sccp_test_rtp_ack.c
tools/: asterisk-1.6.x-patch-widebandslin16k.patch  autorevision  bootstrap.sh  chan-sccp-b.spec  chan-sccp-b_backtrace  chan-sccp.spec  gen_backtrace  gen_sccp_enum.awk  get_documentation.py  git-pre-commit.sh  prepare_release  suse.spec  suse_asterisk14.spec  suse_asterisk161.spec  versioncheck
(+33 files in other folders)
