# FILE: AutoMake Makefile for chan-sccp-b
# COPYRIGHT: chan-sccp-b.sourceforge.net group 2009
# CREATED BY: Diederik de Groot <ddegroot@sourceforge.net>
# LICENSE: This program is free software and may be modified and distributed under the terms of the GNU Public License version 3.
#          See the LICENSE file at the top of the source tree.
# DATE:     $Date$
# REVISION: $Revision$
# NOTE: Process this file with automake to produce a makefile.in script.

EXTRA_DIST = doxygen.cfg doxygen-header  														\
	01_Index.doc                            05_Features_V3.doc                  09_Developers_Guide.doc         13_Reporting_Issues_Problems.doc 	\
	02_What_Is_Chan_SCCP.doc                06_New_Features.doc                 10_Sources_Explained.doc						\
	03_Building_and_Installation_Guide.doc  07_Frequently_Asked_Questions.doc   11_Consulted_Documentation.doc					\
	04_Setup_Guide.doc                      08_Supported_Operating_Systems.doc  12_Licensing.doc
DX_CLEANFILES = everything to clean.

