# FILE: AutoMake Makefile for chan-sccp-b
# COPYRIGHT: chan-sccp-b.sourceforge.net group 2009
# CREATED BY: Diederik de Groot <ddegroot@sourceforge.net>
# LICENSE: This program is free software and may be modified and distributed under the terms of the GNU Public License version 3.
#          See the LICENSE file at the top of the source tree.
# DATE:     $Date$
# REVISION: $Revision$
# NOTE: Process this file with automake to produce a makefile.in script.
include $(top_srcdir)/amdoxygen.am
EXTRA_DIST = doxygen.cfg doxygen-header  														\
	00_Index.doc                            40_New_Features.doc                 80_Consulted_Documentation.doc 					\
	10_What_Is_Chan_SCCP.doc                50_Frequently_Asked_Questions.doc   90_Developers_Guide.doc        					\
	20_Building_and_Installation_Guide.doc  55_Reporting_Issues_Problems.doc    99_Licensing.doc               					\
	30_Setup_Guide.doc                      60_Supported_Operating_Systems.doc  chan-sccp-b_pdf.sty            					\
	35_How_To.doc                           70_Sources_Explained.doc
	
# DX_CLEANFILES = everything to clean.

