# FILE: AutoMake Makefile for chan-sccp-b
# COPYRIGHT: chan-sccp-b.sourceforge.net group 2009
# CREATED BY: Diederik de Groot <ddegroot@sourceforge.net>
# LICENSE: This program is free software and may be modified and distributed under the terms of the GNU Public License version 3.
#          See the LICENSE file at the top of the source tree.
# NOTE: Process this file with automake to produce a makefile.in script.
include $(top_srcdir)/amdoxygen.am
EXTRA_DIST = doxygen.cfg doxygen-header chan-sccp-b_pdf.sty
#DX_CLEANFILES = everything to clean.

